Typo fix found by Rob Rice

--- a/docs/config/sfmc-code-resource.mdx
+++ b/docs/config/sfmc-code-resource.mdx
@@ -132,7 +132,7 @@ This approach, while easy to implement, has many drawbacks:
 - If you want to make your form dynamic, you need to have all required data in the front end (showing your business logic)
 - You will have limited antispam capabilities (only basic honeypots and validations)
 
-The second popular pattern is using a single Cloud Page and changing displayed content depending on the request type thanks to SSJS `Request.Method()` (GET outpits form view and POST shows thank you page). Unfortunately, all drawbacks (including the cost) are the same as each Cloud Page load (whether it is the same or different) costs 1 SuperMessage.
+The second popular pattern is using a single Cloud Page and changing displayed content depending on the request type thanks to SSJS `Request.Method()` (GET outputs form view and POST shows thank you page). Unfortunately, all drawbacks (including the cost) are the same as each Cloud Page load (whether it is the same or different) costs 1 SuperMessage.
 
 #### Good Form Backend with Code Resource
 
