Full linking of the IS Catalog Architecture article + small content fixes

--- a/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
+++ b/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
@@ -14,7 +14,7 @@ import { Button } from '../../../src/components/Buttons.js';
 
 ## Problem with debugging Catalog data
 
-Interaction Studio (MCP) can pull product, content and related catalog data from multiple sources and does it continuously. That's perfect when all works great, but debugging features are minimal once you see some data discrepancies.
+Interaction Studio (MCP) can pull [product, content and related catalog data](../is-catalog-architecture.mdx) from multiple sources and does it continuously. That's perfect when all works great, but debugging features are minimal once you see some data discrepancies.
 
 Sure, SFTP stores processed CSV Feed files, but finding the culprit takes work, especially if you push frequently with delta files.
 
@@ -144,7 +144,7 @@ Optionally, you can modify the scope of returned data in the left Configuration 
 
 ## Limitations
 
-While this solution can benefit Interaction Studio Catalog Object debugging, there are a few significant limitations.
+While this solution can benefit Interaction Studio [Catalog Object](../is-catalog-architecture.mdx) debugging, there are a few significant limitations.
 
 ### Data scope
 
