--- a/sites/ideas/interaction-studio-ideas.mdx
+++ b/sites/ideas/interaction-studio-ideas.mdx
@@ -28,6 +28,8 @@ Interaction Studio displays the hierarchy built with those fields on the specifi
 
 It should change - there should be a feature parity between Sitemap and ETL for such an important feature. Especially considering that all information required for it is already available.
 
+Read about risky workaround [here](../../../docs/interaction-studio/is-catalog-architecture/#category-catalog-unique-attributes).
+
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000MMZ27UAH/full-category-hierarchy-support-for-etl-in-interaction-studio'
     text='Vote on IdeaExchange'
@@ -45,6 +47,8 @@ It is a huge issue because it makes it impossible to debug catalog item states o
 There should be an option to export the catalog in full scope, matching the ETL schema.
 
 Bonus points for an option to include (or not) archived Items in the export. It would be a hugely beneficial addition for debugging purposes and Item reintroduction requirements (for example after mistake in archiving).
+
+Read about partial workaround [here](../../../docs/interaction-studio/is-catalog-architecture/#export-full-is-catalog-data).
 
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000NVRj3UAH/full-is-mcp-catalog-export'
